Name:                espresso
Version:             0.1
Description:         A compiler for the MiniJava language     
License:             BSD3
License-file:        LICENSE
Author:              Erik Helin
Maintainer:          erik.helin@gmail.com
Category:            Language
Build-type:          Simple
Cabal-version:       >=1.2
Executable espresso
    Hs-source-dirs:  src
    GHC-options:     -Wall
    Main-is:         Main.hs 
    Build-depends:   base >= 4
